<resources>
    <string name="eui">Navigate home</string>
    <string name="euj">Navigate up</string>
    <string name="euk">Done</string>
    <string name="eul">See all</string>
    <string name="eum">Choose an app</string>
    <string name="eun">OFF</string>
    <string name="euo">ON</string>
    <string name="eup">Alt+</string>
    <string name="euq">Ctrl+</string>
    <string name="eur">delete</string>
    <string name="eus">enter</string>
    <string name="eut">Function+</string>
    <string name="euu">Meta+</string>
    <string name="euv">Shift+</string>
    <string name="euw">space</string>
    <string name="eux">Sym+</string>
    <string name="euy">Menu+</string>
    <string name="euz">Search…</string>
    <string name="ev0">Clear query</string>
    <string name="ev1">Search</string>
    <string name="ev2">Submit query</string>
    <string name="ev3">Voice search</string>
    <string name="ev4">Share with</string>
    <string name="ev5">Share with %s</string>
    <string name="ev6">Collapse</string>
    <string name="ev7">"Couldn't access SD card."</string>
    <string name="ev8">Add</string>
    <string name="ev9">Recognize</string>
    <string name="ev_">AI camera is off</string>
    <string name="eva">AI camera is on</string>
    <string name="evb">AI watermark panel</string>
    <string name="evc">Open Long exposure panel</string>
    <string name="evd">Rear camera preview</string>
    <string name="eve">View image with and without Beautify</string>
    <string name="evf">Beautify</string>
    <string name="evg">Beautify panel</string>
    <string name="evh">Beautify</string>
    <string name="evi">Reset Beautify parameters</string>
    <string name="evj">Open aperture adjustment panel</string>
    <string name="evk">Turned off live moments</string>
    <string name="evl">Turned on live moments</string>
    <string name="evm">Front and rear camera switch</string>
    <string name="evn">Switched cameras successfully</string>
    <string name="evo">Took a photo successfully</string>
    <string name="evp">Switch to Photo mode</string>
    <string name="evq">Switch to Video mode</string>
    <string name="evr">Full body mode is off</string>
    <string name="evs">Full body mode is on</string>
    <string name="evt">%dFPS</string>
    <string name="evu">%dFPS</string>
    <string name="evv">%dFPS</string>
    <string name="evw">%dFPS</string>
    <string name="evx">Open Auto tracking shot panel</string>
    <string name="evy">Zoom direction</string>
    <string name="evz">Zoom range</string>
    <string name="ew0">Zoom speed</string>
    <string name="ew1">Off</string>
    <string name="ew2">Fill light is off</string>
    <string name="ew3">Open the Master‑lens system panel</string>
    <string name="ew4">"Coordinates won't be shown"</string>
    <string name="ew5">Coordinates will be shown</string>
    <string name="ew6">Time stamp is off</string>
    <string name="ew7">Time stamp is on</string>
    <string name="ew8">Date</string>
    <string name="ew9">Timer set for ten seconds</string>
    <string name="ew_">Timer set for three seconds</string>
    <string name="ewa">Timer set for five seconds</string>
    <string name="ewb">Timer is off</string>
    <string name="ewc">Image format: %1$s</string>
    <string name="ewd">%1$s is off</string>
    <string name="ewe">%1$s is on</string>
    <string name="ewf">Clone panel</string>
    <string name="ewg">Magic zoom</string>
    <string name="ewh">Deselected all</string>
    <string name="ewi">Close the text recognition page</string>
    <string name="ewj">Recognize text</string>
    <string name="ewk">Scanning documents. Black and white.</string>
    <string name="ewl">Scanning documents. Original.</string>
    <string name="ewm">Scanning documents. Enhanced.</string>
    <string name="ewn">Double tap to exit</string>
    <string name="ewo">View changes</string>
    <string name="ewp">Viewed changes successfully</string>
    <string name="ewq">Combined video</string>
    <string name="ewr">Separated videos</string>
    <string name="ews">Speed and duration panel</string>
    <string name="ewt">Opened filter menu</string>
    <string name="ewu">Auto flash is on</string>
    <string name="ewv">Flash is working in the Soft light mode</string>
    <string name="eww">Fill light is on auto</string>
    <string name="ewx">Fill light is off</string>
    <string name="ewy">Fill light is on</string>
    <string name="ewz">Fill light is on in flashlight mode</string>
    <string name="ex0">Flash is off</string>
    <string name="ex1">Flash is on</string>
    <string name="ex2">"Can't adjust flash"</string>
    <string name="ex3">Soft flash is on in flashlight mode</string>
    <string name="ex4">Flash is on (flashlight mode)</string>
    <string name="ex5">Focus distance</string>
    <string name="ex6">%s mm equivalent focal length</string>
    <string name="ex7">Located near the lower edge of the frame</string>
    <string name="ex8">Located near the left edge of the frame</string>
    <string name="ex9">Located near the lower left corner of the frame</string>
    <string name="ex_">Located near the upper left corner of the frame</string>
    <string name="exa">Located near the center of the frame</string>
    <string name="exb">Located near the right edge of the frame</string>
    <string name="exc">Located near the lower right corner of the frame</string>
    <string name="exd">Located near the upper right corner of the frame</string>
    <string name="exe">Located near the upper edge of the frame</string>
    <string name="exf">%1$sX zoom</string>
    <string name="exg">Front camera preview</string>
    <string name="exh">Auto HDR is on</string>
    <string name="exi">HDR is off</string>
    <string name="exj">HDR is on</string>
    <string name="exk">Turned off shooting in landscape mode</string>
    <string name="exl">Shooting in landscape mode</string>
    <string name="exm">Done</string>
    <string name="exn">Exit</string>
    <string name="exo">Loading</string>
    <string name="exp">Pause</string>
    <string name="exq">Play</string>
    <string name="exr">View previous item</string>
    <string name="exs">Delete previous clip</string>
    <string name="ext">Speed panel</string>
    <string name="exu">Locked focus successfully</string>
    <string name="exv">Macro mode is off</string>
    <string name="exw">Macro mode is on</string>
    <string name="exx">Customization panel</string>
    <string name="exy">Menu: Collapse</string>
    <string name="exz">Menu: Expand</string>
    <string name="ey0">Backgrounds panel</string>
    <string name="ey1">GIF mode is off</string>
    <string name="ey2">GIF mode is on</string>
    <string name="ey3">Avatar panel</string>
    <string name="ey4">Split screen</string>
    <string name="ey5">Voice panel</string>
    <string name="ey6">Not using movie frame</string>
    <string name="ey7">Using movie frame</string>
    <string name="ey8">Switched to %s</string>
    <string name="ey9">Motion detection is off</string>
    <string name="ey_">Motion detection is on</string>
    <string name="eya">More</string>
    <string name="eyb">Motion capture is off</string>
    <string name="eyc">Motion capture is on</string>
    <string name="eyd">Select cameras again</string>
    <string name="eye">On</string>
    <string name="eyf">Horizontal</string>
    <string name="eyg">Vertical</string>
    <string name="eyh">Move the device down</string>
    <string name="eyi">Move device to the left</string>
    <string name="eyj">Move device to the right</string>
    <string name="eyk">Move the device up</string>
    <string name="eyl">One by one aspect ratio</string>
    <string name="eym">Two by three aspect ratio</string>
    <string name="eyn">Three by four aspect ratio</string>
    <string name="eyo">Eight by nine aspect ratio</string>
    <string name="eyp">Nine by sixteen aspect ratio</string>
    <string name="eyq">Widescreen aspect ratio</string>
    <string name="eyr">Full screen aspect ratio</string>
    <string name="eys">Two point three nine by one aspect ratio</string>
    <string name="eyt">Portrait panel</string>
    <string name="eyu">Rear camera preview</string>
    <string name="eyv">Preview</string>
    <string name="eyw">Zoom in</string>
    <string name="eyx">Front camera preview</string>
    <string name="eyy">Front camera preview</string>
    <string name="eyz">Dual phone recording preview</string>
    <string name="ez0">Position %1$d</string>
    <string name="ez1">Selected</string>
    <string name="ez2">Zoom out</string>
    <string name="ez3">%1$.1fX zoom preview</string>
    <string name="ez4">Protective watermark</string>
    <string name="ez5">Open the menu with PRO parameters</string>
    <string name="ez6">Lite mode</string>
    <string name="ez7">Zoom out</string>
    <string name="ez8">Most recent photo</string>
    <string name="ez9">Ultra zoom: Auto</string>
    <string name="ez_">Ultra zoom is off</string>
    <string name="eza">Ultra zoom is on</string>
    <string name="ezb">Selected all</string>
    <string name="ezc">Selected</string>
    <string name="ezd">Deselect</string>
    <string name="eze">Settings</string>
    <string name="ezf">Shutter button</string>
    <string name="ezg">Take a photo while shooting a video</string>
    <string name="ezh">Captured successfully</string>
    <string name="ezi">Stop</string>
    <string name="ezj">Next</string>
    <string name="ezk">Pause</string>
    <string name="ezl">Capturing</string>
    <string name="ezm">Resume</string>
    <string name="ezn">Saving</string>
    <string name="ezo">Turned off</string>
    <string name="ezp">Turned on</string>
    <string name="ezq">Vertical, front-facing</string>
    <string name="ezr">Horizontal, left-front diagonal close-up</string>
    <string name="ezs">Horizontal, right-front diagonal</string>
    <string name="ezt">Horizontal, right-front diagonal close-up</string>
    <string name="fc8">MasterCinema</string>
    <string name="fee">Switch layout</string>
    <string name="feo">No cameras connected</string>
    <string name="ffg">Scarlet</string>
    <string name="ffj">Teal mist</string>
    <string name="fk5">Multicam setup</string>
    <string name="fkz">Soft focus</string>
    <string name="fl0">Standard</string>
    <string name="fl1">Master‑lens system</string>
    <string name="flp">Cancel</string>
    <string name="ful">"Combine both sides of your ID in one image.
Print the copy wirelessly on A4 paper."</string>
    <string name="fum">Scan ID</string>
    <string name="fvd">Share</string>
    <string name="fyq">Ink painting</string>
    <string name="fyz">Import preset</string>
    <string name="fz6">Select AM or PM</string>
    <string name="fzc">cubic-bezier(0.0, 0.0, 0.2, 1.0)</string>
    <string name="fzg">Range end</string>
    <string name="fzj">AM</string>
    <string name="fzn">PM</string>
    <string name="fzw">Back</string>
    <string name="g3b">Done</string>
    <string name="g8q">Close feature description</string>
    <string name="g8r">Feature description</string>
    <string name="g_s">Filter</string>
    <string name="g_x">Frame</string>
    <string name="gah">Master portrait</string>
    <string name="gc1">\u0012T}qga2}|2fzw2}pxwqf2q~}awaf2f}2fzw2qs\u007fw`s&lt;2Bw`twqf2t}`2b`}vgqf2`wd{wea2s|v2\u007f}`w&lt;\u0018Ywwb2fzw2}pxwqf2{|2fzw2\u007f{vv~w2}t2fzw2aq`ww|&lt;</string>
    <string name="gc2">8{TWK]\u0015MH\u0018^W[MK</string>
    <string name="gii">Turn on</string>
    <string name="gn2">Stunning visual experience, lifelike details, and striking contrast</string>
    <string name="gn3">Dolby Vision</string>
    <string name="h3v">You can only shoot vlogs in landscape mode</string>
    <string name="h3w">Keep your device stable</string>
    <string name="e1s">Saving items…</string>
    <string name="h4x">Create photo masterpieces</string>
    <string name="h4z">Create video masterpieces</string>
</resources>