<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/camera_widget_red_capture_layout" android:background="@drawable/bg_widget_camera_lens" android:padding="@dimen/e5j" android:layout_width="match_parent" android:layout_height="match_parent" android:contentDescription="@string/h4x"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:id="@id/camera_red_capture_widget_icon_1" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:contentDescription="@string/gah" android:layout_marginEnd="@dimen/e5j" />
    <ImageView android:id="@id/camera_red_capture_widget_icon_2" android:layout_width="0.0dp" android:layout_height="match_parent" android:layout_weight="1.0" android:contentDescription="@string/fyq" />
</LinearLayout>
