<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/cine_client_root" android:background="@color/black" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.camera2.compat.theme.custom.mm.cinemaster.view.MagicView android:id="@id/cine_magic_view" android:layout_width="match_parent" android:layout_height="match_parent" />
    <RelativeLayout android:gravity="center" android:id="@id/rl_monitor_modify_layout" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:id="@id/iv_monitor_modify_layout" android:layout_width="@dimen/d04" android:layout_height="@dimen/d02" android:src="@drawable/ic_vector_monitor_layout_modify" android:contentDescription="@string/fee" />
    </RelativeLayout>
    <com.android.camera.ui.CameraSnapView android:id="@id/iv_snap_view" android:focusable="false" android:visibility="gone" android:clickable="true" android:layout_width="@dimen/bfx" android:layout_height="@dimen/bfx" android:contentDescription="@string/ezf" />
    <LinearLayout android:gravity="end|center" android:orientation="horizontal" android:id="@id/top_config_layout" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageButton android:id="@id/iv_monitor_statue" android:background="@null" android:layout_width="@dimen/drv" android:layout_height="@dimen/drv" android:src="@drawable/ic_vector_cine_popup_connect_view_mm" android:contentDescription="@string/fk5" />
        <ImageButton android:id="@id/iv_close" android:background="@null" android:layout_width="@dimen/drv" android:layout_height="@dimen/drv" android:src="@drawable/ic_vector_close_monitor" android:contentDescription="@string/fzw" />
    </LinearLayout>
    <com.android.camera2.compat.theme.custom.mm.cinemaster.view.MagicIndicator android:id="@id/cine_indicator" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" />
    <TextView android:textSize="@dimen/d06" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_tips" android:visibility="gone" android:layout_width="match_parent" android:layout_height="match_parent" android:text="@string/feo" />
</RelativeLayout>
