<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.xiaomi.microfilm.vlog.VVProgressView android:layout_gravity="left" android:id="@id/vv_progress" android:layout_width="@dimen/e1a" android:layout_height="@dimen/e18" android:layout_marginLeft="@dimen/e19" android:layout_marginRight="@dimen/e19" />
    <FrameLayout android:id="@id/vv_preview_layout" android:layout_width="match_parent" android:layout_height="match_parent" />
    <FrameLayout android:id="@id/vv_preview_top" android:background="@color/black" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" />
    <FrameLayout android:id="@id/vv_preview_center" android:layout_width="match_parent" android:layout_height="match_parent">
        <TextView android:textSize="@dimen/e1v" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/vv_stability_newTip_text" android:background="@drawable/toast_top_recommend_tip_bg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/e1s" android:paddingStart="@dimen/e1s" android:paddingEnd="@dimen/e1s" />
    </FrameLayout>
    <TextView android:textSize="@dimen/e0e" android:textColor="@color/white" android:layout_gravity="end|center" android:id="@id/h3w" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="-70.0dp" android:text="@string/h3w" style="@style/hh6" />
    <TextView android:textSize="@dimen/e0e" android:textColor="@color/white" android:layout_gravity="center" android:id="@id/vv_process_hint" android:clickable="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/h3v" style="@style/hh6" />
    <FrameLayout android:id="@id/vv_process_video_cover" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:layout_gravity="center" android:id="@id/vv_preview_thumb" android:focusable="false" android:clickable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:scaleType="fitXY" android:adjustViewBounds="true" />
        <ImageView android:layout_gravity="center" android:id="@id/vv_preview_play" android:background="@drawable/bg_thumbnail_background_full" android:focusable="false" android:clickable="true" android:layout_width="@dimen/bfd" android:layout_height="@dimen/bfd" android:src="@drawable/ic_vector_play" android:scaleType="centerInside" android:contentDescription="@string/eyv" />
        <ProgressBar android:layout_gravity="center" android:id="@id/vv_concat_progress" android:background="@drawable/bg_thumbnail_background_full" android:padding="15.0dp" android:layout_width="@dimen/bfu" android:layout_height="@dimen/bfu" android:indeterminateDrawable="@drawable/vv_process_progress" android:indeterminateDuration="700" style="?android:progressBarStyleLarge" />
    </FrameLayout>
    <FrameLayout android:id="@id/vv_preview_bottom_action" android:layout_width="match_parent" android:layout_height="match_parent">
        <FrameLayout android:id="@id/vv_preview_bottom_parent" android:clipChildren="false" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginTop="@dimen/bep">
            <ImageView android:layout_gravity="start|center" android:id="@id/vv_preview_back" android:background="@drawable/bg_thumbnail_background_full" android:layout_width="@dimen/bfd" android:layout_height="@dimen/bfd" android:src="@drawable/ic_vector_close" android:scaleType="centerInside" android:contentDescription="@string/exn" android:layout_marginStart="@dimen/bfc" />
            <ImageView android:layout_gravity="start|center" android:id="@id/vv_segment_preview" android:background="@drawable/bg_thumbnail_background_full" android:layout_width="@dimen/bfd" android:layout_height="@dimen/bfd" android:src="@drawable/ic_vector_play" android:scaleType="centerInside" android:contentDescription="@string/exr" android:layout_marginStart="@dimen/bfc" />
            <com.android.camera.ui.CameraSnapView android:layout_gravity="center" android:id="@id/vv_preview_save_circle" android:focusable="false" android:clickable="true" android:layout_width="@dimen/bfx" android:layout_height="@dimen/bfx" android:contentDescription="@string/ezf" />
            <FrameLayout android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.airbnb.lottie.LottieAnimationView android:id="@id/vv_preview_save" android:focusable="false" android:clickable="true" android:layout_width="@dimen/e1_" android:layout_height="@dimen/e1_" android:contentDescription="@string/ezh" app:ac4="false" app:aca="false" />
            </FrameLayout>
            <ImageView android:layout_gravity="center" android:id="@id/vv_preview_next" android:focusable="false" android:clickable="true" android:layout_width="@dimen/e1_" android:layout_height="@dimen/e1_" android:src="@drawable/ic_live_record_next" android:scaleType="centerInside" android:contentDescription="@string/ezj" />
            <ImageView android:layout_gravity="center" android:id="@id/vv_preview_operation_image" android:focusable="false" android:clickable="true" android:layout_width="@dimen/e1_" android:layout_height="@dimen/e1_" android:src="@drawable/ic_vv_save_progress" android:scaleType="centerCrop" android:contentDescription="@string/ezn" />
            <ImageView android:layout_gravity="end|center" android:id="@id/vv_preview_share" android:background="@drawable/bg_thumbnail_background_full" android:focusable="false" android:layout_width="@dimen/bfd" android:layout_height="@dimen/bfd" android:src="@drawable/ic_vector_share" android:scaleType="centerInside" android:contentDescription="@string/fvd" android:layout_marginEnd="@dimen/bfc" />
            <ProgressBar android:layout_gravity="end|center" android:id="@id/vv_share_progress" android:background="@drawable/bg_thumbnail_background_full" android:padding="12.0dp" android:focusable="false" android:clickable="true" android:layout_width="@dimen/bfd" android:layout_height="@dimen/bfd" android:scaleType="centerInside" android:indeterminateDrawable="@drawable/vv_process_progress" android:indeterminateDuration="@integer/e9u" android:contentDescription="@string/ezn" android:layout_marginEnd="@dimen/bfc" style="?android:progressBarStyleLarge" />
            <ImageView android:layout_gravity="end|center" android:id="@id/vv_segment_reverse" android:background="@drawable/bg_thumbnail_background_full" android:focusable="false" android:layout_width="@dimen/bfd" android:layout_height="@dimen/bfd" android:src="@drawable/ic_vector_reverse" android:scaleType="centerInside" android:contentDescription="@string/exs" android:layout_marginEnd="@dimen/bfc" />
        </FrameLayout>
    </FrameLayout>
</FrameLayout>
