<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:layout_width="@dimen/c22" android:layout_height="wrap_content" android:minHeight="@dimen/dfo" app:nw="@dimen/co2">
        <LinearLayout android:orientation="vertical" android:background="#242424" android:layout_width="match_parent" android:layout_height="match_parent" android:contentDescription="@string/g8r">
            <ImageView android:layout_width="match_parent" android:layout_height="@dimen/c1z" android:src="@drawable/id_card_dark_drawable" />
            <TextView android:textSize="18.0sp" android:textColor="#e6ffffff" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="@dimen/c23" android:layout_height="wrap_content" android:layout_marginTop="@dimen/c20" android:text="@string/fum" />
            <TextView android:textSize="14.0sp" android:textColor="#ccffffff" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="@dimen/c23" android:layout_height="wrap_content" android:layout_marginTop="@dimen/c21" android:layout_marginBottom="@dimen/c24" android:text="@string/ful" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <ImageButton android:id="@id/btn_cancel" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/c1y" android:src="@drawable/ic_vector_dialog_cancel" android:contentDescription="@string/g8q" />
</LinearLayout>
