<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView android:layout_width="@dimen/c22" android:layout_height="wrap_content" android:minHeight="@dimen/dfo" android:elevation="0.0dp" app:nw="@dimen/co2">
        <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="match_parent" android:layout_height="wrap_content" android:contentDescription="@string/g8r">
            <ImageView android:layout_width="match_parent" android:layout_height="wrap_content" android:src="@drawable/close_focus_drawable" android:scaleType="fitStart" android:adjustViewBounds="true" android:contentDescription="@string/gc2" />
            <TextView android:textSize="18.0sp" android:textColor="@android:color/black" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="@dimen/c23" android:layout_height="wrap_content" android:layout_marginTop="@dimen/c20" android:text="@string/gc2" />
            <TextView android:textSize="14.0sp" android:textColor="#cc000000" android:gravity="center_horizontal" android:layout_gravity="center_horizontal" android:layout_width="@dimen/c23" android:layout_height="wrap_content" android:layout_marginTop="@dimen/c21" android:layout_marginBottom="@dimen/c24" android:text="@string/gc1" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <ImageButton android:id="@id/btn_cancel" android:background="@android:color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/c1y" android:src="@drawable/ic_vector_dialog_cancel" android:contentDescription="@string/g8q" />
</LinearLayout>
