<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:layout_gravity="center_horizontal" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@id/pickers" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0">
        <miuix.pickerwidget.widget.NumberPicker android:id="@id/month" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fl0" android:layout_weight="1.0" />
        <miuix.pickerwidget.widget.NumberPicker android:id="@id/day" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fkz" android:layout_weight="1.0" />
        <miuix.pickerwidget.widget.NumberPicker android:id="@id/year" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fl1" android:layout_weight="1.0" />
    </LinearLayout>
</LinearLayout>
